# hrms-mcp-server

./: .gitignore  main.py  pyproject.toml
database/: connection.py  schema_setup.py
routes/: __init__.py  connect_page.py  handle_connect.py  main.py
tools/: __init__.py  create_attendance.py  get_connection_link.py  get_monthly_attendance.py  get_my_attendance_history.py  get_today_attendance.py  get_user_salary_info.py  link_account_with_code.py  list_attendance.py  list_holidays.py  main.py  utils.py
