[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hrms-mcp-new"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "httpx>=0.28.1",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
]

[tool.setuptools]
packages = ["database", "routes", "tools"]
